[package]
name = "rsb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
strip = true

[dependencies]
gumdrop = "0.8"
textwrap = { version = "0.15", default-features = false, features = ["smawk", "unicode-width"] }
thiserror = "1.0"

[build-dependencies]
quote = "1.0"